--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dash>=3.2.0",
-    "dash-bootstrap-components>=2.0.3",
     "dash-design-kit>=0.0.1",
+    "dash-mantine-components>=2.1.0",
     "pandas>=2.3.1",
     "plotly>=6.3.0",
 ]
